--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "for word in st.split():\n",
+    "    if word[0] == 's':\n",
+    "        print(word)\n"
    ]
   },
   {
@@ -46,11 +59,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "for i in range(0,11,2):\n",
+    "    print(i)\n",
+    "        \n",
+    "list(range(0,11,2))"
    ]
   },
   {
@@ -63,12 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "[i for i in range(1,51) if i%3==0]"
    ]
   },
   {
@@ -81,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,11 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word even!\n",
+      "in even!\n",
+      "this even!\n",
+      "sentence even!\n",
+      "that even!\n",
+      "an even!\n",
+      "even even!\n",
+      "number even!\n",
+      "of even!\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "for word in st.split():\n",
+    "    if len(word)%2 == 0:\n",
+    "        print(word+\" even!\")"
    ]
   },
   {
@@ -107,11 +177,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fizz3\n",
+      "Buzz5\n",
+      "Fizz6\n",
+      "Fizz9\n",
+      "Buzz10\n",
+      "Fizz12\n",
+      "FizzBuzz 15\n",
+      "Fizz18\n",
+      "Buzz20\n",
+      "Fizz21\n",
+      "Fizz24\n",
+      "Buzz25\n",
+      "Fizz27\n",
+      "FizzBuzz 30\n",
+      "Fizz33\n",
+      "Buzz35\n",
+      "Fizz36\n",
+      "Fizz39\n",
+      "Buzz40\n",
+      "Fizz42\n",
+      "FizzBuzz 45\n",
+      "Fizz48\n",
+      "Buzz50\n",
+      "Fizz51\n",
+      "Fizz54\n",
+      "Buzz55\n",
+      "Fizz57\n",
+      "FizzBuzz 60\n",
+      "Fizz63\n",
+      "Buzz65\n",
+      "Fizz66\n",
+      "Fizz69\n",
+      "Buzz70\n",
+      "Fizz72\n",
+      "FizzBuzz 75\n",
+      "Fizz78\n",
+      "Buzz80\n",
+      "Fizz81\n",
+      "Fizz84\n",
+      "Buzz85\n",
+      "Fizz87\n",
+      "FizzBuzz 90\n",
+      "Fizz93\n",
+      "Buzz95\n",
+      "Fizz96\n",
+      "Fizz99\n",
+      "Buzz100\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "for i in range(1,101):\n",
+    "    if i%15 == 0:\n",
+    "        print(f\"FizzBuzz {i}\")\n",
+    "        continue\n",
+    "    elif i%5 == 0:\n",
+    "        print(f\"Buzz{i}\")\n",
+    "        continue\n",
+    "    elif i%3 == 0:\n",
+    "        print(f\"Fizz{i}\")\n",
+    "        continue "
    ]
   },
   {
@@ -124,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "[word[0] for word in st.split()]"
    ]
   },
   {
@@ -164,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
