--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -35,10 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "guess = random.randint(1,100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,11 +51,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Try to guess the random value: More close you got, more warm you will have"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "guesses = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,13 +84,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert your first choise: 3\n",
+      "COLD!\n",
+      "Insert your choise: 40\n",
+      "WARMER!\n",
+      "Insert your choise: 50\n",
+      "COLDER!\n",
+      "Insert your choise: 45\n",
+      "WARMER!\n",
+      "Insert your choise: 46\n",
+      "COLDER!\n",
+      "Insert your choise: 44\n",
+      "WARMER!\n",
+      "Insert your choise: 42\n",
+      "WARMER!\n",
+      "Insert your choise: 40\n",
+      "WARMER!\n",
+      "Insert your choise: 39\n",
+      "WARMER!\n",
+      "Insert your choise: 35\n",
+      "WARMER!\n",
+      "Insert your choise: 33\n",
+      "WARMER!\n",
+      "Insert your choise: 30\n",
+      "COLDER!\n",
+      "Insert your choise: 32\n",
+      "Yesss! You got it!\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
+    "choise = int(input(\"Insert your first choise: \"))\n",
+    "if(choise < 1 and choise >100):\n",
+    "    print(\"OUT OF BOUNDS\")\n",
+    "    guesses.append(100)\n",
+    "\n",
+    "t = abs(choise-guess)\n",
+    "if t > 10:\n",
+    "    print(\"COLD!\")\n",
+    "elif t < 10:\n",
+    "    print(\"WARM!\")\n",
+    "else:\n",
+    "    print(\"Yess! you got at first attempt!\")\n",
+    "guesses.append(t)\n",
+    "\n",
+    "while guesses[-1]:\n",
+    "    choise = int(input(\"Insert your choise: \"))\n",
+    "    if(choise < 1 and choise >100):\n",
+    "        print(\"OUT OF BOUNDS\")\n",
+    "        guesses.append(100)\n",
+    "              \n",
+    "    guesses.append(abs(choise-guess))\n",
     "    \n",
-    "    pass"
+    "    \n",
+    "    if not(guesses[-1]):\n",
+    "        print(\"Yesss! You got it!\")\n",
+    "    elif guesses[-2] < guesses[-1]:\n",
+    "        print(\"COLDER!\")\n",
+    "    else:\n",
+    "        print(\"WARMER!\")"
    ]
   },
   {
@@ -106,6 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "while True:\n",
     "\n",
     "    # we can copy the code from above to take an input\n",
@@ -146,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
