--- a/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
+++ b/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,23 +1055,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  *  \n",
-      " * * \n",
       "*****\n",
-      "*   *\n",
-      "*   *\n"
+      "*    \n",
+      "*    \n",
+      "*    \n",
+      "*****\n"
      ]
     }
    ],
    "source": [
-    "print_big('a')"
+    "print_big('C')"
    ]
   },
   {
@@ -1098,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
