--- a/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
+++ b/05-Object Oriented Programming/02-Object Oriented Programming Homework.ipynb
@@ -13,25 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Line:\n",
-    "    \n",
+    "    '''\n",
+    "    coor1, coor2 = tuples of two point\n",
+    "    '''\n",
     "    def __init__(self,coor1,coor2):\n",
-    "        pass\n",
+    "        self.coor1 = coor1\n",
+    "        self.coor2 = coor2\n",
     "    \n",
     "    def distance(self):\n",
-    "        pass\n",
+    "        return ((self.coor2[0]-self.coor1[0])**2 + (self.coor2[1]-self.coor1[1])**2)**0.5\n",
     "    \n",
     "    def slope(self):\n",
-    "        pass"
+    "        return (self.coor2[1]-self.coor1[1])/(self.coor2[0]-self.coor1[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +57,7 @@
        "9.433981132056603"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +77,61 @@
        "1.6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXAMPLE OUTPUT\n",
+    "\n",
+    "coordinate1 = (3,2)\n",
+    "coordinate2 = (8,10)\n",
+    "\n",
+    "li = Line(coordinate1,coordinate2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.433981132056603"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li.distance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,25 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cylinder:\n",
     "    \n",
+    "    pi = 3.14\n",
+    "    \n",
     "    def __init__(self,height=1,radius=1):\n",
-    "        pass\n",
+    "        self.height = height\n",
+    "        self.radius = radius\n",
     "        \n",
     "    def volume(self):\n",
-    "        pass\n",
+    "        return (self.radius**2) * self.height * self.pi\n",
     "    \n",
     "    def surface_area(self):\n",
-    "        pass"
+    "        return 2*self.pi*(self.radius**2) + 2*self.pi*self.radius*self.height"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +197,7 @@
        "56.52"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +217,57 @@
        "94.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.surface_area()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXAMPLE OUTPUT\n",
+    "c = Cylinder(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.52"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.volume()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94.2"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
